Init commit; Added `fetchBalance` and `createTransaction` methods.
