# main-service/src/main/kotlin/presentation/rest/commissionparticipant/GetCommissionParticipantByCommissionIdAndAUIDRequest.kt
@@ -1,10 +1,0 @@
-package presentation.rest.commissionparticipant
-
-import com.axus.winelore.model.entity.CommissionParticipant
-import kotlinx.serialization.Serializable
-
-@Serializable
-data class GetCommissionParticipantByCommissionIdAndAUIDRequest(
-    val commissionId: String,
-    val auid: Long
-)
